# api/handlers/wishlist.go
@@ -3,12 +3,175 @@ package handlers
 import (
 	"camping-backend-with-go/api/presenter"
 	"camping-backend-with-go/pkg/dto"
+	"camping-backend-with-go/pkg/dto/wishdto"
 	"camping-backend-with-go/pkg/entities"
 	"camping-backend-with-go/pkg/serializer"
-	"camping-backend-with-go/pkg/service/wishlistsvc"
+	"camping-backend-with-go/pkg/serializer/wishmarshal"
+	"camping-backend-with-go/pkg/service/wishlist"
 	"github.com/gofiber/fiber/v2"
 	"gorm.io/gorm"
+	"log"
 )
+
+// CreateWishList
+// @Summary CreateWishList
+// @Description CreateWishList
+// @Tags WishList
+// @Accept json
+// @Produce json
+// @Param wishlist body wishdto.CreateWishListReq true "Create WishList"
+// @Success 200 {object} presenter.JsonResponse{data=wishmarshal.WishListRes}
+// @Failure 503 {object} presenter.JsonResponse
+// @Router /wishlist [post]
+// @Security Bearer
+func CreateWishList(service wishlist.Service) fiber.Handler {
+	return func(c *fiber.Ctx) error {
+		var requestBody wishdto.CreateWishListReq
+		db, ok := c.Locals("db").(*gorm.DB)
+		if !ok {
+			log.Fatal("database load failed...")
+		}
+		if err := c.BodyParser(&requestBody); err != nil {
+			jsonResponse := presenter.NewJsonResponse(true, err.Error(), nil)
+			return c.Status(fiber.StatusInternalServerError).JSON(jsonResponse)
+		}
+
+		wishList, err := service.CreateWishList(&requestBody, c)
+		if err != nil {
+			jsonResponse := presenter.NewJsonResponse(true, err.Error(), nil)
+			return c.Status(fiber.StatusInternalServerError).JSON(jsonResponse)
+		}
+
+		spotSerializer := func(spots []entities.Spot) []dto.SpotListOut {
+			return serializer.SpotsSerializer(spots, db, c)
+		}
+
+		serializedWishList := wishmarshal.NewWishListSerializer(wishList).
+			WishSpotsSerializer(spotSerializer)
+		jsonResponse := presenter.NewJsonResponse(false, "", serializedWishList.Serialize())
+		return c.Status(fiber.StatusOK).JSON(jsonResponse)
+	}
+}
+
+// GetWishList
+// @Summary GetWishList
+// @Description GetWishList
+// @Tags WishList
+// @Accept json
+// @Produce json
+// @Param id path int true "wishlist id"
+// @Success 200 {object} presenter.JsonResponse{data=wishmarshal.WishListRes}
+// @Failure 503 {object} presenter.JsonResponse
+// @Router /wishlist/{id} [get]
+// @Security Bearer
+func GetWishList(service wishlist.Service) fiber.Handler {
+	return func(c *fiber.Ctx) error {
+		db, ok := c.Locals("db").(*gorm.DB)
+		if !ok {
+			log.Fatal("database load failed...")
+		}
+
+		wishListId, err := c.ParamsInt("id")
+		if err != nil {
+			jsonResponse := presenter.NewJsonResponse(true, err.Error(), nil)
+			return c.Status(fiber.StatusInternalServerError).JSON(jsonResponse)
+		}
+
+		wishList, err := service.GetWishList(wishListId, c)
+		if err != nil {
+			jsonResponse := presenter.NewJsonResponse(true, err.Error(), nil)
+			return c.Status(fiber.StatusInternalServerError).JSON(jsonResponse)
+		}
+
+		spotSerializer := func(spots []entities.Spot) []dto.SpotListOut {
+			return serializer.SpotsSerializer(spots, db, c)
+		}
+
+		serializedWishList := wishmarshal.NewWishListSerializer(wishList).
+			WishSpotsSerializer(spotSerializer)
+		jsonResponse := presenter.NewJsonResponse(false, "", serializedWishList.Serialize())
+		return c.Status(fiber.StatusOK).JSON(jsonResponse)
+	}
+}
+
+// UpdateWishList
+// @Summary UpdateWishList
+// @Description UpdateWishList
+// @Tags WishList
+// @Accept json
+// @Produce json
+// @Param id path int true "wishlist id"
+// @Param wishlist body wishdto.UpdateWishListReq true "Update WishList"
+// @Success 200 {object} presenter.JsonResponse{data=wishmarshal.WishListRes}
+// @Failure 503 {object} presenter.JsonResponse
+// @Router /wishlist/{id} [put]
+// @Security Bearer
+func UpdateWishList(service wishlist.Service) fiber.Handler {
+	return func(c *fiber.Ctx) error {
+		db, ok := c.Locals("db").(*gorm.DB)
+		if !ok {
+			log.Fatal("database load failed...")
+		}
+
+		wishListId, err := c.ParamsInt("id")
+		if err != nil {
+			jsonResponse := presenter.NewJsonResponse(true, err.Error(), nil)
+			return c.Status(fiber.StatusInternalServerError).JSON(jsonResponse)
+		}
+
+		var requestBody wishdto.UpdateWishListReq
+		if err := c.BodyParser(&requestBody); err != nil {
+			jsonResponse := presenter.NewJsonResponse(true, err.Error(), nil)
+			return c.Status(fiber.StatusInternalServerError).JSON(jsonResponse)
+		}
+
+		wishList, err := service.UpdateWishList(&requestBody, wishListId, c)
+		if err != nil {
+			jsonResponse := presenter.NewJsonResponse(true, err.Error(), nil)
+			return c.Status(fiber.StatusInternalServerError).JSON(jsonResponse)
+		}
+
+		spotSerializer := func(spots []entities.Spot) []dto.SpotListOut {
+			return serializer.SpotsSerializer(spots, db, c)
+		}
+
+		serializedWishList := wishmarshal.NewWishListSerializer(wishList).
+			WishSpotsSerializer(spotSerializer)
+		jsonResponse := presenter.NewJsonResponse(false, "", serializedWishList.Serialize())
+		return c.Status(fiber.StatusOK).JSON(jsonResponse)
+	}
+}
+
+// DeleteWishList
+// @Summary DeleteWishList
+// @Description DeleteWishList
+// @Tags WishList
+// @Accept json
+// @Produce json
+// @Param id path int true "wishlist id"
+// @Success 200 {object} presenter.JsonResponse{}
+// @Failure 503 {object} presenter.JsonResponse{}
+// @Router /wishlist/{id} [delete]
+// @Security Bearer
+func DeleteWishList(service wishlist.Service) fiber.Handler {
+	return func(c *fiber.Ctx) error {
+
+		wishListId, err := c.ParamsInt("id")
+		if err != nil {
+			jsonResponse := presenter.NewJsonResponse(true, err.Error(), nil)
+			return c.Status(fiber.StatusInternalServerError).JSON(jsonResponse)
+		}
+
+		err = service.DeleteWishList(wishListId, c)
+		if err != nil {
+			jsonResponse := presenter.NewJsonResponse(true, err.Error(), nil)
+			return c.Status(fiber.StatusInternalServerError).JSON(jsonResponse)
+		}
+
+		jsonResponse := presenter.NewJsonResponse(false, "successfull delete ", nil)
+		return c.Status(fiber.StatusOK).JSON(jsonResponse)
+	}
+}
 
 // GetWishLists
 // @Summary GetWishLists
@@ -16,13 +179,13 @@ import (
 // @Tags WishList
 // @Accept json
 // @Produce json
-// @Success 200 {object} presenter.JsonResponse{data=[]serializer.WishListRes}
+// @Success 200 {object} presenter.JsonResponse{data=[]wishmarshal.WishListRes}
 // @Failure 503 {object} presenter.JsonResponse
-// @Router /wishlists [get]
+// @Router /wishlist [get]
 // @Security Bearer
-func GetWishLists(controller wishlistsvc.Controller) fiber.Handler {
+func GetWishLists(service wishlist.Service) fiber.Handler {
 	return func(c *fiber.Ctx) error {
-		wishLists, err := controller.GetWishLists(c)
+		wishLists, err := service.GetWishLists(c)
 		if err != nil {
 			jsonResponse := presenter.NewJsonResponse(true, err.Error(), nil)
 			return c.Status(fiber.StatusInternalServerError).JSON(jsonResponse)
@@ -42,7 +205,7 @@ func GetWishLists(controller wishlistsvc.Controller) fiber.Handler {
 		//	return helpers.SerializeUser(user)
 		//}
 
-		serializedWishLists := serializer.NewWishListsSerializer(wishLists).
+		serializedWishLists := wishmarshal.NewWishListsSerializer(wishLists).
 			WithSpotsSerializer(spotsSerializer)
 
 		jsonResponse := presenter.NewJsonResponse(false, "", serializedWishLists.Serialize())
@@ -58,31 +221,32 @@ func GetWishLists(controller wishlistsvc.Controller) fiber.Handler {
 // @Produce json
 // @Param id path int true "wishlist id"
 // @Param spot_id path int true "spot id"
-// @Success 200 {object} presenter.JsonResponse{data=[]serializer.WishListRes}
+// @Success 200 {object} presenter.JsonResponse{data=[]wishmarshal.WishListRes}
 // @Failure 503 {object} presenter.JsonResponse
 // @Router /wishlist/{id}/spot/{spot_id} [put]
 // @Security Bearer
-func WishListToggle(controller wishlistsvc.Controller) fiber.Handler {
+func WishListToggle(service wishlist.Service) fiber.Handler {
 	return func(c *fiber.Ctx) error {
-		db, ok := c.Locals("db").(*gorm.DB)
-		if !ok {
-			jsonResponse := presenter.NewJsonResponse(true, "failed Load database", nil)
-			return c.Status(fiber.StatusInternalServerError).JSON(jsonResponse)
-		}
-		wishList, err := controller.WishListToggle(c)
+
+		wishListId, err := c.ParamsInt("id")
 		if err != nil {
 			jsonResponse := presenter.NewJsonResponse(true, err.Error(), nil)
 			return c.Status(fiber.StatusInternalServerError).JSON(jsonResponse)
 		}
 
-		spotSerializer := func(spots []entities.Spot) []dto.SpotListOut {
-			return serializer.SpotsSerializer(spots, db, c)
+		spotId, err := c.ParamsInt("spotId")
+		if err != nil {
+			jsonResponse := presenter.NewJsonResponse(true, err.Error(), nil)
+			return c.Status(fiber.StatusInternalServerError).JSON(jsonResponse)
 		}
 
-		serializedWishList := serializer.NewWishListSerializer(wishList).
-			WishSpotsSerializer(spotSerializer)
+		err = service.WishListToggle(wishListId, spotId, c)
+		if err != nil {
+			jsonResponse := presenter.NewJsonResponse(true, err.Error(), nil)
+			return c.Status(fiber.StatusInternalServerError).JSON(jsonResponse)
+		}
 
-		jsonResponse := presenter.NewJsonResponse(false, "", serializedWishList.Serialize())
+		jsonResponse := presenter.NewJsonResponse(false, "added spot! to your wishlist", nil)
 		return c.Status(fiber.StatusOK).JSON(jsonResponse)
 	}
 }
