# pkg/dto/wishdto/wishlist_req.go
@@ -1,0 +1,9 @@
+package wishdto
+
+type CreateWishListReq struct {
+	Name string `json:"name"`
+}
+
+type UpdateWishListReq struct {
+	Name string `json:"name"`
+}
